[package]
name = "grzybpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
reqwest = "0.12.24"
scraper = "0.24.0"
time = { version = "0.3.44", features = ["parsing", "macros"] }
tokio = { version = "1.*", features = ["full"] }
url = "2.5.7"
more-wallpapers = { version = "0.4.0", features = ["fallback"] }
camino = "1.2.1"
